--- a/.github/actions/nodejs/npm-test/action.yaml
+++ b/.github/actions/nodejs/npm-test/action.yaml
@@ -22,43 +22,43 @@ inputs:
 
 outputs:
   test_result:
-    description: 'Tests result'
+    description: "Tests result"
     value: ${{ steps.test.outputs.test_result }}
 
 runs:
   using: "composite"
   steps:
-  - uses: actions/setup-node@v3
-    with:
-      node-version: ${{ inputs.node_version }}
+    - uses: actions/setup-node@v3
+      with:
+        node-version: ${{ inputs.node_version }}
 
-  - name: Cache node modules
-    id: cache-npm
-    uses: actions/cache@v3
-    env:
-      cache-name: cache-node-modules
-    with:
-      path: ${{ inputs.package_json_path }}/node_modules
-      key: modules-${{ hashFiles('package-lock.json') }}
+    - name: Cache node modules
+      id: cache-npm
+      uses: actions/cache@v3
+      env:
+        cache-name: cache-node-modules
+      with:
+        path: ${{ inputs.package_json_path }}/node_modules
+        key: modules-${{ hashFiles('package-lock.json') }}
 
-  - name: Install Dependencies
-    if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
-    shell: bash
-    working-directory: ${{ inputs.package_json_path }}
-    run: |
-      npm install ${{ inputs.force_install_dependencies == true && '--force' || '' }}
+    - name: Install Dependencies
+      if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
+      shell: bash
+      working-directory: ${{ inputs.package_json_path }}
+      run: |
+        npm install ${{ inputs.force_install_dependencies == true && '--force' || '' }}
 
-  - name: Install mocha
-    if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
-    shell: bash
-    working-directory: ${{ inputs.package_json_path }}
-    run: |
-      npm install --global mocha
+    - name: Install mocha
+      if: ${{ steps.cache-npm.outputs.cache-hit != 'true' }}
+      shell: bash
+      working-directory: ${{ inputs.package_json_path }}
+      run: |
+        npm install --global mocha
 
-  - name: Run tests
-    id: test
-    shell: bash
-    working-directory: ${{ inputs.package_json_path }}
-    run: |
-      ${{ inputs.test_command }}
-      echo "test_result=${{ job.status }}" >> $GITHUB_OUTPUT
+    - name: Run tests
+      id: test
+      shell: bash
+      working-directory: ${{ inputs.package_json_path }}
+      run: |
+        ${{ inputs.test_command }}
+        echo "test_result=${{ job.status }}" >> $GITHUB_OUTPUT
