--- a/.github/actions/aws/ecr-create/action.yaml
+++ b/.github/actions/aws/ecr-create/action.yaml
@@ -16,7 +16,7 @@ inputs:
 #   id-token: write
 
 runs:
-  using: "composite"
+  using: composite
   steps:
     - name: Check if ECR Repository exists
       shell: bash
