--- a/.github/actions/aws/publish-to-ecr/action.yaml
+++ b/.github/actions/aws/publish-to-ecr/action.yaml
@@ -10,15 +10,15 @@ inputs:
     description: ECR url registry
   image_tag:
     required: false
-    description: "Image tag to be published"
+    description: Image tag to be published
     default: latest
   dockerfile_context:
     required: false
-    description: "Location of the dockerfile"
+    description: Location of the dockerfile
     default: .
   dockerfile_name:
     required: false
-    description: "Location of the dockerfile"
+    description: Location of the dockerfile
     default: Dockerfile
   build_args:
     required: false
@@ -32,7 +32,7 @@ inputs:
 #   package: write
 
 runs:
-  using: "composite"
+  using: composite
   steps:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
