--- a/.github/actions/git/git-tag/action.yaml
+++ b/.github/actions/git/git-tag/action.yaml
@@ -8,7 +8,7 @@ inputs:
     description: the git tag to publish
 
 runs:
-  using: "composite"
+  using: composite
   steps:
     - name: Push new tag
       id: push-new-tag
