--- a/.github/actions/python/pytest/action.yaml
+++ b/.github/actions/python/pytest/action.yaml
@@ -1,28 +1,28 @@
 ---
 name: pytest tests
-description: "Install dependencies and run tests using pytest"
+description: Install dependencies and run tests using pytest
 
 inputs:
   test_command:
     required: false
-    description: "Pytest command to run"
+    description: Pytest command to run
     default: python -m pytest
   python_version:
     required: false
     description: Python version to run
-    default: "3.9"
+    default: 3.9
   requirements_file:
     required: false
-    description: "Path to requirements file"
-    default: "requirements.txt"
+    description: Path to requirements file
+    default: requirements.txt
 
 outputs:
   test_result:
-    description: "My output description"
+    description: My output description
     value: ${{ steps.test.outputs.test_result }}
 
 runs:
-  using: "composite"
+  using: composite
   steps:
     - name: Set up Python
       id: setup_python
