--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -4,7 +4,7 @@ cli:
 plugins:
   sources:
     - id: trunk
-      ref: v1.2.0
+      ref: v1.2.1
       uri: https://github.com/trunk-io/plugins
 runtimes:
   enabled:
@@ -12,6 +12,7 @@ runtimes:
     - python@3.10.8
 lint:
   enabled:
+    - taplo@0.8.1
     - actionlint@1.6.25
     - bandit@1.7.5
     - black@23.7.0
@@ -30,6 +31,7 @@ actions:
   disabled:
     - trunk-announce
     - trunk-check-pre-push
-    - trunk-fmt-pre-commit
   enabled:
+    - trunk-fmt-pre-commit
+    - trufflehog-pre-commit
     - trunk-upgrade-available
