--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -12,6 +12,8 @@ runtimes:
     - python@3.10.8
 lint:
   enabled:
+    - hadolint@2.12.0
+    - terrascan@1.18.3
     - taplo@0.8.1
     - actionlint@1.6.25
     - bandit@1.7.5
