--- a/.github/workflows/docker-build-scan-push.yaml
+++ b/.github/workflows/docker-build-scan-push.yaml
@@ -6,6 +6,7 @@ jobs:
     runs-on: ubuntu-22.04
     env:
       DOCKER_IMAGE: docker-scanned:latest
+    permissions: write-all
     steps:
       - uses: actions/checkout@v3
       - name: Set up Docker Buildx
