--- a/.github/workflows/docker-build-scan-push.yaml
+++ b/.github/workflows/docker-build-scan-push.yaml
@@ -9,19 +9,9 @@ jobs:
     permissions: write-all
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Build the image (Dockerfile)
-        uses: docker/build-push-action@v2
-        id: build-image
-        with:
-          context: ./poc/docker-scan-trivy
-          file: ./poc/docker-scan-trivy/Dockerfile
-          push: false
-          tags: ${{ env.DOCKER_IMAGE }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+      - name: Build
+        run: |
+          docker build --file ./poc/docker-scan-trivy/Dockerfile --tag ${{ env.DOCKER_IMAGE }} ./poc/docker-scan-trivy
 
       - name: Scan Docker image
         uses: zMynxx/github-actions/.github/actions/shared/docker-scan-trivy@feature/gha
