--- a/.github/workflows/docker-build-scan-push.yaml
+++ b/.github/workflows/docker-build-scan-push.yaml
@@ -6,12 +6,14 @@ jobs:
     runs-on: ubuntu-22.04
     env:
       DOCKER_IMAGE: docker-scanned:latest
-    permissions: write-all
+    permissions:
+      contents: read # for actions/checkout to fetch code
+      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
+      actions: read # only required for a private repository by github/codeql-action/upload-sarif to get the Action run status
     steps:
       - uses: actions/checkout@v3
       - name: Build
-        run: |
-          docker build --file ./poc/docker-scan-trivy/Dockerfile --tag ${{ env.DOCKER_IMAGE }} ./poc/docker-scan-trivy
+        run: docker build --file ./poc/docker-scan-trivy/Dockerfile --tag ${{ env.DOCKER_IMAGE }} ./poc/docker-scan-trivy
 
       - name: Scan Docker image
         uses: zMynxx/github-actions/.github/actions/shared/docker-scan-trivy@feature/gha
