--- a/.github/workflows/aqua-tracee.yaml
+++ b/.github/workflows/aqua-tracee.yaml
@@ -1,11 +1,13 @@
 ---
 name: Aqua Tracee Security
 on:
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:
+  # pull_request:
+  #   branches:
+  #     - main
 jobs:
   tracee:
+    permissions: write-all
     runs-on: ubuntu-22.04
     steps:
       - name: Start Tracee
