--- a/.github/workflows/aqua-tracee.yaml
+++ b/.github/workflows/aqua-tracee.yaml
@@ -2,12 +2,11 @@
 name: Aqua Tracee Security
 on:
   workflow_dispatch:
-  # pull_request:
-  #   branches:
-  #     - main
+  pull_request:
+    branches:
+      - main
 jobs:
   tracee:
-    # permissions: write-all
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
@@ -19,3 +18,6 @@ jobs:
 
       - name: Stop Tracee
         uses: aquasecurity/tracee-action@v0.2.0-stop
+        with:
+          create_pr: true
+          fail_on_diff: true
