--- a/.github/workflows/aqua-tracee.yaml
+++ b/.github/workflows/aqua-tracee.yaml
@@ -8,6 +8,10 @@ on:
 jobs:
   tracee:
     runs-on: ubuntu-22.04
+    permissions:
+      security-events: write
+      pull-requests: write
+      contents: read
     steps:
       - uses: actions/checkout@v3
       - name: Start Tracee
