no profile, turned off with actions

--- a/.github/workflows/aqua-tracee.yaml
+++ b/.github/workflows/aqua-tracee.yaml
@@ -19,6 +19,6 @@ jobs:
 
       - name: Stop Tracee
         uses: aquasecurity/tracee-action@v0.2.0-stop
-        with:
-          # create-pr: true
-          fail-on-diff: true
+        # with:
+        #   create-pr: true
+        #   fail-on-diff: true
